# kv-server

./: .gitignore  Cargo.toml  README.md  abi.proto  build.rs
examples/: client.rs  dummy_server.rs  server.rs  server_with_sled.rs
src/: error.rs  lib.rs
src/pb/: abi.rs  mod.rs
src/service/: command_service.rs  mod.rs
src/storage/: memory.rs  mod.rs  sleddb.rs
